# againstlolodds-app

./: .gitignore  README.md  pyproject.toml  scripts.py  temp.py
againstlolodds/: __init__.py  againstlolodds.kv  app.py  main.py  proxy.py  session.py
againstlolodds/ui/: againstlolodds.kv  app.py  main.py
res/: championWinRates.json  winrates.json
src/: connect.py  main.py
tests/: test_againstlolodds.py
