[tool.poetry]
name = "againstlolodds"
version = "0.1.0"
description = ""
authors = ["Noah Corona <noa@coronasoftware.net>"]
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.21"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
flake8 = "^3.7"

[tool.poetry.scripts]
start = "src.main:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
